fix(select input): truncate long content (#249)

--- a/app/assets/stylesheets/src/shared/_components.scss
+++ b/app/assets/stylesheets/src/shared/_components.scss
@@ -114,19 +114,26 @@
   --sc_input_right_padding: calc(var(--sc_chevron_size) * 1.41 + var(--sc_chevron_padding));
 
   // Imitate tabler dropdown toggle icon.
-  &.with-chevron .selectize-input:after {
-    border-color: unset !important;
-    border-style: unset !important;
+  &.with-chevron .selectize-input {
+    input,
+    .item {
+      max-width: 100% !important;
+    }
 
-    border-bottom-style: var(--tblr-border-style) !important;
-    border-left-style: var(--tblr-border-style) !important;
-    transform: rotate(-45deg) translateY(-50%);
-    border-width: 1px !important;
+    &:after {
+      border-color: unset !important;
+      border-style: unset !important;
 
-    margin-top: calc(var(--sc_chevron_size) / -2) !important;
-    width: var(--sc_chevron_size) !important;
-    height: var(--sc_chevron_size) !important;
-    right: var(--sc_chevron_padding);
+      border-bottom-style: var(--tblr-border-style) !important;
+      border-left-style: var(--tblr-border-style) !important;
+      transform: rotate(-45deg) translateY(-50%);
+      border-width: 1px !important;
+
+      margin-top: calc(var(--sc_chevron_size) / -2) !important;
+      width: var(--sc_chevron_size) !important;
+      height: var(--sc_chevron_size) !important;
+      right: var(--sc_chevron_padding);
+    }
   }
 
   .selectize-input {
